【WIP】UNKNOWN_BASE_TYPEの退治。RequestBodyを参照するようにopenapi.yamlを変更し、再Generateした。
