# src/main/java/javajo/ponsyukey/controller/ReviewApi.java
@@ -1,17 +1,17 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.0.1).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.1.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 package javajo.ponsyukey.controller;
 
-import javajo.ponsyukey.model.UNKNOWN_BASE_TYPE;
+import javajo.ponsyukey.model.CreateReview;
+import javajo.ponsyukey.model.DeleteReview;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
@@ -22,7 +22,7 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-02-21T08:00:01.182023100Z[UTC]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-03-21T15:29:30.596334700+09:00[Asia/Tokyo]")
 @Validated
 @Api(value = "review", description = "the review API")
 public interface ReviewApi {
@@ -34,7 +34,7 @@ public interface ReviewApi {
     /**
      * POST /review : 口コミ情報登録API
      *
-     * @param UNKNOWN_BASE_TYPE 口コミ情報登録に必要な情報 (required)
+     * @param createReview 口コミ情報登録に必要な情報 (required)
      * @return http ステータスコード 200 ok。バリデーションエラー時も200でレスポンスする (status code 200)
      *         or http ステータスコード 400 error (status code 400)
      *         or http ステータスコード 500 error (status code 500)
@@ -49,7 +49,7 @@ public interface ReviewApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<Object> createReview(@ApiParam(value = "口コミ情報登録に必要な情報" ,required=true )  @Valid @RequestBody UNKNOWN_BASE_TYPE UNKNOWN_BASE_TYPE) {
+    default ResponseEntity<Object> createReview(@ApiParam(value = "口コミ情報登録に必要な情報" ,required=true )  @Valid @RequestBody CreateReview createReview) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
@@ -59,7 +59,7 @@ public interface ReviewApi {
      * POST /review/{reviewId} : 口コミ情報削除API
      *
      * @param reviewId  (required)
-     * @param UNKNOWN_BASE_TYPE 口コミ情報削除に必要な情報 (required)
+     * @param deleteReview 口コミ情報削除に必要な情報 (required)
      * @return http ステータスコード 200 ok。バリデーションエラー時も200でレスポンスする (status code 200)
      *         or http ステータスコード 400 error (status code 400)
      *         or http ステータスコード 500 error (status code 500)
@@ -74,7 +74,7 @@ public interface ReviewApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<Object> deleteReview(@ApiParam(value = "",required=true) @PathVariable("reviewId") String reviewId,@ApiParam(value = "口コミ情報削除に必要な情報" ,required=true )  @Valid @RequestBody UNKNOWN_BASE_TYPE UNKNOWN_BASE_TYPE) {
+    default ResponseEntity<Object> deleteReview(@ApiParam(value = "",required=true) @PathVariable("reviewId") String reviewId,@ApiParam(value = "口コミ情報削除に必要な情報" ,required=true )  @Valid @RequestBody DeleteReview deleteReview) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
