# src/main/java/javajo/ponsyukey/controller/SakeApi.java
@@ -1,17 +1,16 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.0.1).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.1.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 package javajo.ponsyukey.controller;
 
-import javajo.ponsyukey.model.UNKNOWN_BASE_TYPE;
+import javajo.ponsyukey.model.CreateSake;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
@@ -22,7 +21,7 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-02-21T08:00:01.182023100Z[UTC]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-03-21T15:29:30.596334700+09:00[Asia/Tokyo]")
 @Validated
 @Api(value = "sake", description = "the sake API")
 public interface SakeApi {
@@ -34,7 +33,7 @@ public interface SakeApi {
     /**
      * POST /sake : 酒情報登録API
      *
-     * @param UNKNOWN_BASE_TYPE 酒情報登録に必要な情報 (required)
+     * @param createSake 酒情報登録に必要な情報 (required)
      * @return http ステータスコード 200 ok。バリデーションエラー時も200でレスポンスする (status code 200)
      *         or http ステータスコード 400 error (status code 400)
      *         or http ステータスコード 500 error (status code 500)
@@ -49,7 +48,7 @@ public interface SakeApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<Object> createSake(@ApiParam(value = "酒情報登録に必要な情報" ,required=true )  @Valid @RequestBody UNKNOWN_BASE_TYPE UNKNOWN_BASE_TYPE) {
+    default ResponseEntity<Object> createSake(@ApiParam(value = "酒情報登録に必要な情報" ,required=true )  @Valid @RequestBody CreateSake createSake) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
