# src/main/java/javajo/ponsyukey/controller/SaketomoApi.java
@@ -1,17 +1,17 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.0.1).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (5.1.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 package javajo.ponsyukey.controller;
 
-import javajo.ponsyukey.model.UNKNOWN_BASE_TYPE;
+import javajo.ponsyukey.model.CreateSaketomo;
+import javajo.ponsyukey.model.SaketomoWithAuth;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
@@ -22,7 +22,7 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-02-21T08:00:01.182023100Z[UTC]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-03-21T15:29:30.596334700+09:00[Asia/Tokyo]")
 @Validated
 @Api(value = "saketomo", description = "the saketomo API")
 public interface SaketomoApi {
@@ -34,7 +34,7 @@ public interface SaketomoApi {
     /**
      * POST /saketomo : 会員登録API
      *
-     * @param UNKNOWN_BASE_TYPE 会員登録に必要な情報 (required)
+     * @param createSaketomo 会員登録に必要な情報 (required)
      * @return http ステータスコード 200 ok。バリデーションエラー時も200でレスポンスする (status code 200)
      *         or http ステータスコード 400 error (status code 400)
      *         or http ステータスコード 500 error (status code 500)
@@ -49,7 +49,7 @@ public interface SaketomoApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<Object> createSaketomo(@ApiParam(value = "会員登録に必要な情報" ,required=true )  @Valid @RequestBody UNKNOWN_BASE_TYPE UNKNOWN_BASE_TYPE) {
+    default ResponseEntity<Object> createSaketomo(@ApiParam(value = "会員登録に必要な情報" ,required=true )  @Valid @RequestBody CreateSaketomo createSaketomo) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
@@ -82,7 +82,7 @@ public interface SaketomoApi {
      * POST /saketomo/{saketomoId} : 会員編集API
      *
      * @param saketomoId  (required)
-     * @param UNKNOWN_BASE_TYPE 会員編集に必要な情報 (required)
+     * @param saketomoWithAuth 会員編集に必要な情報 (required)
      * @return http ステータスコード 200 ok。バリデーションエラー時も200でレスポンスする (status code 200)
      *         or http ステータスコード 400 error (status code 400)
      *         or http ステータスコード 500 error (status code 500)
@@ -97,7 +97,7 @@ public interface SaketomoApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<Object> updateSaketomo(@ApiParam(value = "",required=true) @PathVariable("saketomoId") String saketomoId,@ApiParam(value = "会員編集に必要な情報" ,required=true )  @Valid @RequestBody UNKNOWN_BASE_TYPE UNKNOWN_BASE_TYPE) {
+    default ResponseEntity<Object> updateSaketomo(@ApiParam(value = "",required=true) @PathVariable("saketomoId") String saketomoId,@ApiParam(value = "会員編集に必要な情報" ,required=true )  @Valid @RequestBody SaketomoWithAuth saketomoWithAuth) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
